<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data class="ProductEditBinding">
        <import type="android.view.View"/>
        <variable
            name="viewModel"
            type="com.team.androidpos.ui.product.ProductEditViewModel" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:hint="@string/hint_product_name"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@={viewModel.product.name}"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayout2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:hint="@string/price"
                app:layout_constraintEnd_toEndOf="@+id/textInputLayout"
                app:layout_constraintStart_toStartOf="@+id/textInputLayout"
                app:layout_constraintTop_toBottomOf="@+id/textInputLayout">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="numberDecimal"
                    android:text="@={viewModel.product.price}"/>
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/textView12"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/categories"
                app:layout_constraintEnd_toEndOf="@+id/textInputLayout2"
                app:layout_constraintStart_toStartOf="@+id/textInputLayout2"
                app:layout_constraintTop_toBottomOf="@+id/textInputLayout2" />

            <View
                android:id="@+id/divider"
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_marginTop="8dp"
                android:background="?android:attr/listDivider"
                app:layout_constraintEnd_toEndOf="@+id/textView12"
                app:layout_constraintStart_toStartOf="@+id/textView12"
                app:layout_constraintTop_toBottomOf="@+id/textView12" />

            <com.google.android.material.chip.ChipGroup
                android:id="@+id/chipGroupCategories"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:paddingTop="8dp"
                app:layout_constraintEnd_toEndOf="@+id/textView12"
                app:layout_constraintStart_toStartOf="@+id/textView12"
                app:layout_constraintTop_toBottomOf="@+id/divider"
                app:singleSelection="true">


            </com.google.android.material.chip.ChipGroup>

            <CheckBox
                android:id="@+id/checkBox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/available"
                android:checked="@={viewModel.product.available}"
                app:layout_constraintEnd_toEndOf="@+id/textInputLayout3"
                app:layout_constraintStart_toStartOf="@+id/textInputLayout3"
                app:layout_constraintTop_toBottomOf="@+id/textInputLayout3" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayout3"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:hint="@string/barcode"
                app:layout_constraintEnd_toEndOf="@+id/chipGroupCategories"
                app:layout_constraintStart_toStartOf="@+id/chipGroupCategories"
                app:layout_constraintTop_toBottomOf="@+id/chipGroupCategories">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:lines="1"
                    android:text="@={viewModel.product.barcode}"/>
            </com.google.android.material.textfield.TextInputLayout>

            <androidx.appcompat.widget.AppCompatImageButton
                android:id="@+id/btnScan"
                android:layout_width="48dp"
                android:layout_height="0dp"
                android:layout_marginTop="4dp"
                android:background="?attr/selectableItemBackground"
                app:layout_constraintBottom_toBottomOf="@+id/textInputLayout3"
                app:layout_constraintEnd_toEndOf="@+id/textInputLayout3"
                app:layout_constraintTop_toTopOf="@+id/textInputLayout3"
                app:srcCompat="@drawable/ic_scan_qrcode_dark" />

            <androidx.appcompat.widget.AppCompatImageButton
                android:id="@+id/btnTakePhoto"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_marginTop="16dp"
                android:scaleType="fitXY"
                android:src="@drawable/ic_add_a_photo_black"
                app:layout_constraintEnd_toEndOf="@+id/checkBox"
                app:layout_constraintStart_toStartOf="@+id/checkBox"
                app:layout_constraintTop_toBottomOf="@+id/checkBox" />

            <View
                android:id="@+id/divider2"
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_marginTop="8dp"
                android:background="?android:attr/listDivider"
                app:layout_constraintEnd_toEndOf="@+id/checkBox"
                app:layout_constraintStart_toStartOf="@+id/checkBox"
                app:layout_constraintTop_toBottomOf="@+id/btnTakePhoto" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
                android:text="@string/delete"
                android:visibility="@{viewModel.product.id > 0 ? View.VISIBLE : View.GONE}"
                app:backgroundTint="#d50002"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/divider2"
                app:layout_constraintStart_toStartOf="@+id/divider2"
                app:layout_constraintTop_toBottomOf="@+id/divider2" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>